# acquire-driver-zarr

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  vcpkg-configuration.json  vcpkg.json
api/: CMakeLists.txt
api/c/: CMakeLists.txt
api/cpp/: CMakeLists.txt
api/python/: CMakeLists.txt  acquire-zarr-py-api.cpp
api/src/: CMakeLists.txt  api.cpp
api/tests/: test-api.c
benchmark/: CMakeLists.txt  benchmark.cpp
benchmarks/: CMakeLists.txt  benchmark.storage.cpp  benchmark.storage.hh  zarr-v2-filesystem.cpp
examples/: CMakeLists.txt  README.md  no-striping.cpp  write-big-zarr.cpp  zarr-s3.cpp
src/: CMakeLists.txt  README.md  api.c  api.cpp  chunk.writer.cpp  chunk.writer.hh  common.cpp  common.hh  czar.cpp  czar.hh  czar.v2.cpp  czar.v2.hh  czar.v3.cpp  czar.v3.hh  frame.scaler.cpp  frame.scaler.hh  prelude.h  thread.pool.cpp  thread.pool.hh  tiled.frame.cpp  tiled.frame.hh  zarr.blosc.cpp  zarr.blosc.hh  zarr.codec.hh  zarr.cpp  zarr.driver.c  zarr.encoder.cpp  zarr.encoder.hh  zarr.h  zarr.hh  zarr.raw.cpp  zarr.raw.hh  zarr.scaler.cpp  zarr.scaler.hh  zarr.storage.cpp  zarr.v2.cpp  zarr.v2.hh  zarr.v3.cpp  zarr.v3.hh  zarr_errors.h
src/common/: connection.pool.cpp  connection.pool.hh  dimension.cpp  dimension.hh  macros.hh  s3.connection.cpp  s3.connection.hh  s3.connection.pool.cpp  s3.connection.pool.hh  thread.pool.cpp  thread.pool.hh  utilities.cpp  utilities.hh
src/driver/: CMakeLists.txt  README.md  zarr.hh  zarr.storage.cpp  zarr.storage.hh  zarr.v2.cpp  zarr.v2.hh
src/encoders/: blosc.encoder.hh  chunking.encoder.cpp  chunking.encoder.hh  encoder.hh  raw.encoder.cpp  raw.encoder.hh  sharding.encoder.cpp  sharding.encoder.hh
src/include/: zarr.h  zarr_errors.h
src/internal/: array.writer.cpp  array.writer.hh  blosc.compression.params.cpp  blosc.compression.params.hh  blosc.compressor.cpp  blosc.compressor.hh  file.sink.cpp  file.sink.hh  logger.cpp  logger.hh  s3.connection.cpp  s3.connection.hh  s3.sink.cpp  s3.sink.hh  sink.creator.cpp  sink.creator.hh  stream.settings.c  stream.settings.cpp  stream.settings.h  stream.settings.hh  thread.pool.hh  zarr.common.cpp  zarr.common.hh  zarr.stream.c  zarr.stream.cpp  zarr.stream.h  zarr.stream.hh  zarr_common.c  zarr_internal.c  zarr_internal.h  zarrv2.array.writer.cpp  zarrv2.array.writer.hh  zarrv3.array.writer.cpp  zarrv3.array.writer.hh
src/logger/: CMakeLists.txt  logger.cpp  logger.hh  logger.types.h
src/streaming/: CMakeLists.txt  acquire.zarr.cpp  array.writer.cpp  array.writer.hh  blosc.compression.params.cpp  blosc.compression.params.hh  file.sink.cpp  file.sink.hh  logger.cpp  logger.hh  macros.hh  s3.connection.cpp  s3.connection.hh  s3.sink.cpp  s3.sink.hh  sink.cpp  sink.creator.cpp  sink.creator.hh  sink.hh  stream.settings.cpp  stream.settings.hh  thread.pool.cpp  thread.pool.hh  zarr.api.cpp  zarr.common.cpp  zarr.common.hh  zarr.dimension.cpp  zarr.dimension.hh  zarr.stream.cpp  zarr.stream.hh  zarrv2.array.writer.cpp  zarrv2.array.writer.hh  zarrv3.array.writer.cpp  zarrv3.array.writer.hh
src/v2/: zarr.v2.cpp  zarr.v2.hh
src/v3/: zarr.v3.cpp  zarr.v3.hh
src/writers/: array.writer.cpp  array.writer.hh  blosc.compressor.hh  blosc.writer.cpp  blosc.writer.hh  chunk.writer.cpp  chunk.writer.hh  file.sink.cpp  file.sink.hh  file.writer.cpp  file.writer.hh  filesystem.sink.cpp  filesystem.sink.hh  s3.sink.cpp  s3.sink.hh  s3.writer.cpp  s3.writer.hh  shard.writer.cpp  shard.writer.hh  sink.creator.cpp  sink.creator.hh  sink.hh  writer.cpp  writer.hh  zarr.array.hh  zarrv2.array.writer.cpp  zarrv2.array.writer.hh  zarrv2.file.writer.cpp  zarrv2.file.writer.hh  zarrv2.s3.writer.cpp  zarrv2.s3.writer.hh  zarrv2.writer.cpp  zarrv2.writer.hh  zarrv2.writer.old.cpp  zarrv3.array.writer.cpp  zarrv3.array.writer.hh  zarrv3.file.writer.cpp  zarrv3.file.writer.hh  zarrv3.s3.writer.cpp  zarrv3.s3.writer.hh  (+4 more)
tests/: .gitignore  CMakeLists.txt  README.md  external-metadata-with-whitespace-ok.cpp  get-meta.cpp  get-set-get.cpp  get.cpp  get_and_set_parameters.cpp  metadata-dimension-sizes.cpp  multiscale-with-trivial-tile-size.cpp  multiscales-metadata.cpp  no-set-chunking.cpp  no-striping.cpp  repeat-start.cpp  restart-stopped-zarr-resets-threadpool.cpp  unit-tests.cpp  write-basic-zarr-v3.cpp  write-big-zarr.cpp  write-raw-zarr-with-variable-chunking.cpp  write-zarr-compressed-multiscale.cpp  write-zarr-compressed-with-chunking-and-rollover.cpp  write-zarr-compressed-with-chunking.cpp  write-zarr-raw-multiscale.cpp  write-zarr-raw-with-chunking-and-rollover.cpp  write-zarr-raw-with-chunking.cpp  write-zarr-raw-with-ragged-tiling.cpp  write-zarr-tczyx.cpp  write-zarr-v2-compressed-multiscale.cpp  write-zarr-v2-compressed-with-chunking-and-rollover.cpp  write-zarr-v2-compressed-with-chunking.cpp  write-zarr-v2-raw-chunk-size-larger-than-frame-size.cpp  write-zarr-v2-raw-multiscale-with-trivial-tile-size.cpp  write-zarr-v2-raw-multiscale.cpp  write-zarr-v2-raw-with-even-chunking-and-rollover.cpp  write-zarr-v2-raw-with-even-chunking.cpp  write-zarr-v2-raw-with-ragged-chunking.cpp  write-zarr-v2-raw.cpp  write-zarr-v2-to-s3.cpp  write-zarr-v2-with-lz4-compression.cpp  write-zarr-v2-with-zstd-compression.cpp  (+14 more)
tests/driver/: CMakeLists.txt  external-metadata-with-whitespace-ok.cpp  get-set-get.cpp  get.cpp  list-devices.cpp  metadata-dimension-sizes.cpp  multiscales-metadata.cpp  repeat-start.cpp  restart-stopped-zarr-resets-threadpool.cpp  write-zarr-v2-compressed-multiscale.cpp  write-zarr-v2-compressed-with-chunking-and-rollover.cpp  write-zarr-v2-raw-chunk-size-larger-than-frame-size.cpp  write-zarr-v2-raw-multiscale-with-trivial-tile-size.cpp  write-zarr-v2-raw-multiscale.cpp  write-zarr-v2-raw-with-even-chunking-and-rollover.cpp  write-zarr-v2-raw-with-even-chunking.cpp  write-zarr-v2-raw.cpp  write-zarr-v2-to-s3.cpp  write-zarr-v2-with-lz4-compression.cpp  write-zarr-v2-with-zstd-compression.cpp  write-zarr-v3-raw-chunk-exceeds-array.cpp  write-zarr-v3-raw-multiscale.cpp  (+3 more)
(+104 files in other folders)
